
	* sparse/spaugment.m: Increase test script tolerance.

2008-04-02  John W. Eaton  <jwe@octave.org>

	* deprecated/Makefile.in (SOURCES): Add spkron.m to the list.

	* general/Makefile.in (SOURCES): Add runlength.m to the list.

2008-04-02  Bill Denney  <bill@denney.ws>

	* optimization/lsqnonneg.m: New function.
	* optimization/Makefile.in (SOURCES): Add it to the list.

2008-04-02  David Bateman  <dbateman@free.fr>

	* sparse/spaugment.m: New function
	* sparse/Makefile.in (SOURCES): Add it here.
	
	* plot/__gnuplot_ginput__.m: Use the gnuplot stream itself for
	communication rather than a chat file if mkfifo is not available.
	* plot/gnuplot_drawnow.m: Open stream with popen2 to allow two way
	communication with the gnuplot process.

2008-04-01  Richard Bovey  <Richard.Bovey@baesystems.com>

	* general/sortrows.m: Handle negative column arguments.

2008-04-01  Julian Schnidder  <j.schnidder@gmx.de>

	* miscellaneous/perl.m: New function.
	* miscellaneous/Makefile.in (SOURCES): Add it to the list.

2008-03-31  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Set the tick direction in the main call
	the set tics rather than separately to avoid issues with multiple
	ticks in plotyy.
	
	* plot/gtext.m: New function to place text on a plot.
	* plot/waitforbuttonpress.m: New function.
	* plot/Makefile.in (SOURCES): Add them to the list.
	* plot/__gnuplot_ginput__.m: Bug fix for nargin==1. Workaround for
	missing mkfifo under Windows.
	* plot/ginput.m: Eliminate setting of n.
	
	* plot/ginput.m: New function.
	* plot/__gnuplot_ginput__.m: New function based on a version of
	ginput.m from Petr Mikulik <mikulik@physics.muni.cz>.
	* plot/Makefile.in (SOURCES): Add them to the list.

2008-03-31  Dmitri A. Sergatskov  <dasergatskov@gmail.com>

	* miscellaneous/run.m: Fix check for existence of file.

2008-03-27  Jaroslav Hajek  <highegg@gmail.com>

	* general/lookup.m: Remove (lookup moved to DLD-FUNCTIONS).