@@ -1,4 +1,4 @@
-## Copyright (C) 2008 John W. Eaton
+## Copyright (C) 2008 David Bateman
 ##
 ## This file is part of Octave.
 ##
@@ -17,21 +17,19 @@
 ## <http://www.gnu.org/licenses/>.
 
 ## -*- texinfo -*-
-## @deftypefn {Function File} {} spkron (@var{a}, @var{b})
-## This function has been deprecated.  Use @code{kron} instead.
+## @deftypefn {Function File} {} spatan2 (@var{y}, @var{x})
+## This function has been deprecated.  Use @code{atan2} instead.
 ## @end deftypefn
 
-## Author: jwe
-
-function retval = spkron (varargin)
+function retval = spatan2 (varargin)
   persistent warned = false;
   if (! warned)
     warned = true;
     warning ("Octave:deprecated-function",
-	     ["spkron is obsolete and will be removed from a future\n",
-	      "version of Octave, please use kron instead"]);
+	     ["spatan2 is obsolete and will be removed from a future\n",
+	      "version of Octave, please use atan2 instead"]);
   endif
 
-  retval = kron (varargin{:});
+  retval = atan2 (varargin{:});
 
 endfunction
