@@ -1,4 +1,4 @@
-## Copyright (C) 2008 John W. Eaton
+## Copyright (C) 2008 David Bateman
 ##
 ## This file is part of Octave.
 ##
@@ -17,21 +17,23 @@
 ## <http://www.gnu.org/licenses/>.
 
 ## -*- texinfo -*-
-## @deftypefn {Function File} {} spkron (@var{a}, @var{b})
-## This function has been deprecated.  Use @code{kron} instead.
+## @deftypefn {Loadable Function} {@var{r} =} spqr (@var{a})
+## @deftypefnx {Loadable Function} {@var{r} =} spqr (@var{a},0)
+## @deftypefnx {Loadable Function} {[@var{c}, @var{r}] =} spqr (@var{a},@var{b})
+## @deftypefnx {Loadable Function} {[@var{c}, @var{r}] =} spqr (@var{a},@var{b},0)
+## This function has been deprecated.  Use @code{qr} instead.
 ## @end deftypefn
 
-## Author: jwe
-
-function retval = spkron (varargin)
+function varargout = spqr (varargin)
   persistent warned = false;
   if (! warned)
     warned = true;
     warning ("Octave:deprecated-function",
-	     ["spkron is obsolete and will be removed from a future\n",
-	      "version of Octave, please use kron instead"]);
+	     ["spqr is obsolete and will be removed from a future\n",
+	      "version of Octave, please use qr instead"]);
   endif
 
-  retval = kron (varargin{:});
+  varargout = cell (nargout, 1);
+  [ varargout{:} ] = qr (varargin{:});
 
 endfunction
